get chart displaying

--- a/media/css/base.scss
+++ b/media/css/base.scss
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+
 $theme-colors: (
   "primary": #0b4f6c,
   "light": #e5f2f7
 );
 
 @import "node_modules/bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
-@import "node_modules/metrics-graphics/dist/metricsgraphics.css";
+@import "metricsgraphics.css";
 
 #ixnNav {
   a {
