--- a/ssig_site/base/templates/base.html
+++ b/ssig_site/base/templates/base.html
@@ -81,5 +81,6 @@
 
     <script src="{% static 'js/jquery.slim.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
