display map and keep it centred

--- a/media/css/base.scss
+++ b/media/css/base.scss
@@ -9,7 +9,14 @@ $theme-colors: (
 @import "metricsgraphics.css";
 @import "metricsgraphics-em-fix";
 
+body {
+  font-family: Lato, Helvetica, Arial, "sans-serif";
+  background: theme-color("primary");
+}
+
 #ixnNav {
+  background-color: #fff;
+
   a {
     fill: theme-color("primary");
     color: theme-color("primary");
@@ -74,4 +81,23 @@ $theme-colors: (
 
 .metrics-graph {
   font-size: 12px;
+}
+
+.event-map-wrapper {
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  position: fixed;
+
+  .event-map {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.event-body {
+  background-color: #fff;
+  margin-top: 200px;
 }
