--- a/ssig_site/base/templates/base.html
+++ b/ssig_site/base/templates/base.html
@@ -52,7 +52,7 @@
         </div>
       </div>
     </nav>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary" id="ssigNav">
+    <nav class="navbar navbar-expand-md navbar-dark" id="ssigNav">
       <div class="container">
         <div class="collapse navbar-collapse">
           {% block header %}{% endblock %}
