--- a/ssig_site/base/templates/base.html
+++ b/ssig_site/base/templates/base.html
@@ -10,7 +10,7 @@
 
     <title>{% block title %}SSIGs{% endblock %} - Industry Exchange Network</title>
   </head>
-  <body>
+  <body class="{% block body_classes %}{% endblock %}">
     <nav class="navbar navbar-expand-md navbar-light" id="ixnNav">
       <div class="container">
         <a class="navbar-brand" href="http://ixn.host">
