--- a/ssig_site/base/templates/event.html
+++ b/ssig_site/base/templates/event.html
@@ -2,6 +2,8 @@
 
 {% block title %}{{ event.title }}{% endblock %}
 
+{% block body_classes %}event-page{% endblock %}
+
 {% block header %}
   <h1 class="my-3 mr-3">{{ event.title }}</h1>
   {% if user.is_authenticated %}
