--- a/ssig_site/metrics/templates/metrics.html
+++ b/ssig_site/metrics/templates/metrics.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="row my-3">
+  <div class="row my-3 content">
     <div class="col-lg-6">
       <div id="total-users" class="metrics-graph"></div>
     </div>
