--- a/ssig_site/metrics/templates/metrics.html
+++ b/ssig_site/metrics/templates/metrics.html
@@ -21,6 +21,16 @@
         <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
       </div>
     </div>
+    <div class="col-lg-6 text-center">
+      <div id="event-registration" class="metrics-graph"></div>
+      <div id="events-legend" class="metrics-graph"></div>
+      <div class="btn-group mt-3" role="group" aria-label="Period">
+        <span class="btn btn-sm btn-outline-secondary disabled">Period</span>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="day">Day</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary active" data-period="week">Week</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
+      </div>
+    </div>
   </div>
 {% endblock %}
 
