--- a/ssig_site/metrics/templates/metrics.html
+++ b/ssig_site/metrics/templates/metrics.html
@@ -9,25 +9,34 @@
 
 {% block content %}
   <div class="row my-3 content">
-    <div class="col-lg-6">
+    <div class="col-lg-6 text-center mb-3">
+      <div id="event-registration" class="metrics-graph"></div>
+      <div class="btn-group mb-3" role="group" aria-label="Period">
+        <span class="btn btn-sm btn-outline-secondary disabled">Period</span>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="day">Day</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary active" data-period="week">Week</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
+      </div>
+      <div id="events-legend" class="metrics-graph"></div>
+    </div>
+    <div class="col-lg-6 text-center mb-3">
+      <div id="new-members" class="metrics-graph"></div>
+      <div class="btn-group" role="group" aria-label="Period">
+        <span class="btn btn-sm btn-outline-secondary disabled">Period</span>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="day">Day</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary active" data-period="week">Week</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
+      </div>
+    </div>
+    <div class="col-lg-6 mb-3">
       <div id="total-users" class="metrics-graph"></div>
     </div>
-    <div class="col-lg-6 text-center">
+    <div class="col-lg-6 text-center mb-3">
       <div id="new-users" class="metrics-graph"></div>
       <div id="new-users-controls" class="btn-group" role="group" aria-label="Period">
         <span class="btn btn-sm btn-outline-secondary disabled">Period</span>
         <button type="button" class="btn btn-sm btn-outline-secondary active" data-period="day">Day</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" data-period="week">Week</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
-      </div>
-    </div>
-    <div class="col-lg-6 text-center">
-      <div id="event-registration" class="metrics-graph"></div>
-      <div id="events-legend" class="metrics-graph"></div>
-      <div class="btn-group mt-3" role="group" aria-label="Period">
-        <span class="btn btn-sm btn-outline-secondary disabled">Period</span>
-        <button type="button" class="btn btn-sm btn-outline-secondary" data-period="day">Day</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary active" data-period="week">Week</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" data-period="month">Month</button>
       </div>
     </div>
